# tend

./: .ghc.environment.x86_64-darwin-8.6.5  .ghc.environment.x86_64-darwin-8.8.3  .gitignore  README.md  circle-cli.cabal  circle.yml  hwa-ci.cabal  project.sh  repos.json  results-1.json  results-2.json  stack.yaml  tend.cabal
.circleci/: config.yml
.github/workflows/: haskell.yml
app/: Main.hs  Parser.hs
app/App/: Commands.hs
app/Circle/: Types.hs
app/HaskellWorks/Ci/: Git.hs  Options.hs
app/HaskellWorks/Ci/Action/: FromRemote.hs  OpenCi.hs  Push.hs  Version.hs
app/HaskellWorks/Ci/Api/: Circle.hs
app/HaskellWorks/Ci/Options/: Cmd.hs  Internal.hs
app/HaskellWorks/Ci/Options/Cmd/: FromRemote.hs  Help.hs  NewPr.hs  Push.hs
app/Parser/: Types.hs
src/HaskellWorks/Ci/: Dhall.hs  Git.hs  Lib.hs  Options.hs  Parser.hs  Text.hs  Types.hs
src/HaskellWorks/Ci/Action/: FromRemote.hs  Help.hs  NewPr.hs  OpenCi.hs  OrgRepos.hs  Push.hs  UserRepos.hs  Version.hs
src/HaskellWorks/Ci/Api/: Circle.hs
src/HaskellWorks/Ci/Commands/: FromRemote.hs  Help.hs  NewPr.hs  OpenCi.hs  OrgRepos.hs  Push.hs  Types.hs  UserRepos.hs  Version.hs
src/HaskellWorks/Ci/Options/: Cmd.hs
src/HaskellWorks/Ci/Options/Cmd/: FromRemote.hs  Help.hs  NewPr.hs  OpenCi.hs  OrgRepos.hs  Push.hs  UserRepos.hs  Version.hs
src/HaskellWorks/Ci/Parser/: Types.hs
src/HaskellWorks/Ci/Types/: CiConfig.hs  CircleConfig.hs  GithubRemote.hs  ProjectConfig.hs  VariableAssignment.hs
