name:                circle-cli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/circle-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable circle-cli-exe
  hs-source-dirs:       app
  main-is:              Main.hs
  other-modules:        HaskellWorks.Ci.Api.Circle
                      , HaskellWorks.Ci.Options
                      , HaskellWorks.Ci.Options.Cmd
                      , Haskellworks.Ci.Options.Cmd.Push
                      , Haskellworks.Ci.Options.Cmd.Help
                      , Haskellworks.Ci.Options.Internal
                      , HaskellWorks.Ci.Types
                      , Parser
                      , Parser.Types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , async
                     , attoparsec
                     , bytestring
                     , containers
                     , circle-cli
                     , dhall
                     , directory
                     , either
                     , extra
                     , lens
                     , mtl
                     , optparse-applicative
                     , process
                     , template-haskell
                     , text
                     , transformers
                     , wreq
  default-language:    Haskell2010

test-suite circle-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , circle-cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/circle-cli
