name:                hwa-ci
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hwa-ci#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hwa-ci
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , gitrev
                      , hwa-ci
                      , lens
                      , optparse-applicative

  default-language:    Haskell2010

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Ci.Action.FromRemote
                      , HaskellWorks.Ci.Action.Help
                      , HaskellWorks.Ci.Action.NewPr
                      , HaskellWorks.Ci.Action.OpenCi
                      , HaskellWorks.Ci.Action.OrgRepos
                      , HaskellWorks.Ci.Action.Push
                      , HaskellWorks.Ci.Action.UserRepos
                      , HaskellWorks.Ci.Action.Version
                      , HaskellWorks.Ci.Api.Circle
                      , HaskellWorks.Ci.Git
                      , HaskellWorks.Ci.Options
                      , HaskellWorks.Ci.Options.Cmd
                      , HaskellWorks.Ci.Options.Cmd.FromRemote
                      , HaskellWorks.Ci.Options.Cmd.Help
                      , HaskellWorks.Ci.Options.Cmd.NewPr
                      , HaskellWorks.Ci.Options.Cmd.OpenCi
                      , HaskellWorks.Ci.Options.Cmd.OrgRepos
                      , HaskellWorks.Ci.Options.Cmd.Push
                      , HaskellWorks.Ci.Options.Cmd.UserRepos
                      , HaskellWorks.Ci.Options.Cmd.Version
                      , HaskellWorks.Ci.Options.Internal
                      , HaskellWorks.Ci.Parser
                      , HaskellWorks.Ci.Parser.Types
                      , HaskellWorks.Ci.Text
                      , HaskellWorks.Ci.Types

  build-depends:        base
                      , aeson
                      , async
                      , attoparsec
                      , bytestring
                      , containers
                      , dhall
                      , directory
                      , either
                      , extra
                      , github
                      , lens
                      , mtl
                      , open-browser
                      , optparse-applicative
                      , process
                      , template-haskell
                      , text
                      , transformers
                      , wreq

  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite hwa-ci-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hwa-ci
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hwa-ci
