cabal-version: 2.2

name:                   hwa-ci
version:                0.1.0.2
synopsis:               hwa-ci
description:            hwa-ci.
homepage:               https://github.com/githubuser/hwa-ci#readme
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Author name here
maintainer:             example@example.com
copyright:              2017 Author name here
category:               Web
build-type:             Simple
extra-source-files:     README.md

source-repository head
  type:     git
  location: https://github.com/githubuser/hwa-ci

common base                   { build-depends: base                 >= 4          && < 5      }

common aeson                  { build-depends: aeson                >= 1.4.5.0                }
common async                  { build-depends: async                >= 2.2.2                  }
common attoparsec             { build-depends: attoparsec           >= 0.13.2.3               }
common bytestring             { build-depends: bytestring           >= 0.10.8.2               }
common containers             { build-depends: containers           >= 0.6.0.1                }
common dhall                  { build-depends: dhall                >= 1.26.1                 }
common directory              { build-depends: directory            >= 1.3.3.0                }
common either                 { build-depends: either               >= 5.0.1.1                }
common extra                  { build-depends: extra                >= 1.6.18                 }
common generic-lens           { build-depends: generic-lens         >= 1.2.0.1    && < 1.3    }
common github                 { build-depends: github               >= 0.23                   }
common gitrev                 { build-depends: gitrev               >= 1.3.1                  }
common lens                   { build-depends: lens                 >= 4.18.1                 }
common mtl                    { build-depends: mtl                  >= 2.2.2                  }
common open-browser           { build-depends: open-browser         >= 0.2.1.0                }
common optparse-applicative   { build-depends: optparse-applicative >= 0.15.1.0               }
common process                { build-depends: process              >= 1.6.5.0                }
common template-haskell       { build-depends: template-haskell     >= 2.12.0.0               }
common text                   { build-depends: text                 >= 1.2.3.1                }
common transformers           { build-depends: transformers         >= 0.5.6.2                }
common wreq                   { build-depends: wreq                 >= 0.5.3.2                }

common config
  default-language:     Haskell2010
  ghc-options:          -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

common hwa-ci
  build-depends:        hwa-ci

executable hwa-ci
  import:               base, config
                      , generic-lens
                      , gitrev
                      , hwa-ci
                      , lens
                      , optparse-applicative
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  other-modules:        Paths_hwa_ci
  autogen-modules:      Paths_hwa_ci

library
  import:               base, config
                      , aeson
                      , async
                      , attoparsec
                      , bytestring
                      , containers
                      , dhall
                      , directory
                      , either
                      , extra
                      , generic-lens
                      , github
                      , lens
                      , mtl
                      , open-browser
                      , optparse-applicative
                      , process
                      , template-haskell
                      , text
                      , transformers
                      , wreq
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Ci.Action.FromRemote
                      , HaskellWorks.Ci.Action.Help
                      , HaskellWorks.Ci.Action.NewPr
                      , HaskellWorks.Ci.Action.OpenCi
                      , HaskellWorks.Ci.Action.OrgRepos
                      , HaskellWorks.Ci.Action.Push
                      , HaskellWorks.Ci.Action.UserRepos
                      , HaskellWorks.Ci.Action.Version
                      , HaskellWorks.Ci.Api.Circle
                      , HaskellWorks.Ci.Dhall
                      , HaskellWorks.Ci.Git
                      , HaskellWorks.Ci.Options
                      , HaskellWorks.Ci.Options.Cmd
                      , HaskellWorks.Ci.Options.Cmd.FromRemote
                      , HaskellWorks.Ci.Options.Cmd.Help
                      , HaskellWorks.Ci.Options.Cmd.NewPr
                      , HaskellWorks.Ci.Options.Cmd.OpenCi
                      , HaskellWorks.Ci.Options.Cmd.OrgRepos
                      , HaskellWorks.Ci.Options.Cmd.Push
                      , HaskellWorks.Ci.Options.Cmd.UserRepos
                      , HaskellWorks.Ci.Options.Cmd.Version
                      , HaskellWorks.Ci.Options.Internal
                      , HaskellWorks.Ci.Parser
                      , HaskellWorks.Ci.Parser.Types
                      , HaskellWorks.Ci.Text
                      , HaskellWorks.Ci.Types
                      , HaskellWorks.Ci.Types.CiConfig
                      , HaskellWorks.Ci.Types.CircleConfig
                      , HaskellWorks.Ci.Types.GithubRemote
                      , HaskellWorks.Ci.Types.ProjectConfig
                      , HaskellWorks.Ci.Types.VariableAssignment

test-suite hwa-ci-test
  import:               base, config
                      , hwa-ci
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  other-modules:        Paths_hwa_ci
  autogen-modules:      Paths_hwa_ci
