cabal-version: 2.2

name:                   tend
version:                0.1.0.2
synopsis:               tend
description:            tend.
homepage:               https://github.com/githubuser/tend#readme
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Author name here
maintainer:             example@example.com
copyright:              2017 Author name here
category:               Web
build-type:             Simple
extra-source-files:     README.md

source-repository head
  type:     git
  location: https://github.com/githubuser/tend

common base                   { build-depends: base                 >= 4          && < 5      }

common aeson                  { build-depends: aeson                >= 1.4.5.0    && < 1.5    }
common async                  { build-depends: async                >= 2.2.2      && < 2.3    }
common attoparsec             { build-depends: attoparsec           >= 0.13.2.3   && < 0.14   }
common bytestring             { build-depends: bytestring           >= 0.10.8.2   && < 0.11   }
common containers             { build-depends: containers           >= 0.6.0.1    && < 0.7    }
common dhall                  { build-depends: dhall                >= 1.29.0     && < 1.30   }
common directory              { build-depends: directory            >= 1.3.3.0    && < 1.4    }
common either                 { build-depends: either               >= 5.0.1.1    && < 5.1    }
common extra                  { build-depends: extra                >= 1.6.18     && < 1.7    }
common generic-lens           { build-depends: generic-lens         >= 1.2.0.1    && < 1.3    }
common github                 { build-depends: github               >= 0.24       && < 0.26   }
common gitrev                 { build-depends: gitrev               >= 1.3.1      && < 1.4    }
common lens                   { build-depends: lens                 >= 4.18.1     && < 4.20   }
common mtl                    { build-depends: mtl                  >= 2.2.2      && < 2.3    }
common open-browser           { build-depends: open-browser         >= 0.2.1.0    && < 0.3    }
common optparse-applicative   { build-depends: optparse-applicative >= 0.15.1.0   && < 0.16   }
common process                { build-depends: process              >= 1.6.5.0    && < 1.7    }
common template-haskell       { build-depends: template-haskell     >= 2.12.0.0   && < 2.17   }
common text                   { build-depends: text                 >= 1.2.3.1    && < 1.3    }
common transformers           { build-depends: transformers         >= 0.5.6.2    && < 0.6    }
common wreq                   { build-depends: wreq                 >= 0.5.3.2    && < 0.6    }

common config
  default-language:     Haskell2010
  ghc-options:          -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

common tend
  build-depends:        tend

executable tend
  import:               base, config
                      , generic-lens
                      , gitrev
                      , tend
                      , lens
                      , optparse-applicative
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  other-modules:        App.Commands
                      , Paths_tend
  autogen-modules:      Paths_tend

library
  import:               base, config
                      , aeson
                      , async
                      , attoparsec
                      , bytestring
                      , containers
                      , dhall
                      , directory
                      , either
                      , extra
                      , generic-lens
                      , github
                      , lens
                      , mtl
                      , open-browser
                      , optparse-applicative
                      , process
                      , template-haskell
                      , text
                      , transformers
                      , wreq
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Ci.Api.Circle
                      , HaskellWorks.Ci.Commands.FromRemote
                      , HaskellWorks.Ci.Commands.Help
                      , HaskellWorks.Ci.Commands.NewPr
                      , HaskellWorks.Ci.Commands.OpenCi
                      , HaskellWorks.Ci.Commands.OrgRepos
                      , HaskellWorks.Ci.Commands.Push
                      , HaskellWorks.Ci.Commands.Types
                      , HaskellWorks.Ci.Commands.UserRepos
                      , HaskellWorks.Ci.Commands.Version
                      , HaskellWorks.Ci.Dhall
                      , HaskellWorks.Ci.Git
                      , HaskellWorks.Ci.Parser
                      , HaskellWorks.Ci.Parser.Types
                      , HaskellWorks.Ci.Text
                      , HaskellWorks.Ci.Types
                      , HaskellWorks.Ci.Types.CiConfig
                      , HaskellWorks.Ci.Types.CircleConfig
                      , HaskellWorks.Ci.Types.GithubRemote
                      , HaskellWorks.Ci.Types.ProjectConfig
                      , HaskellWorks.Ci.Types.VariableAssignment

test-suite tend-test
  import:               base, config
                      , tend
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  other-modules:        Paths_tend
  autogen-modules:      Paths_tend
